SONAR-13786 Issue message is not displayed correctly when it is too long

--- a/server/sonar-web/src/main/js/app/styles/init/misc.css
+++ b/server/sonar-web/src/main/js/app/styles/init/misc.css
@@ -580,3 +580,7 @@ th.huge-spacer-right {
   border: 1px solid var(--leakSecondaryColor);
   padding: 4px 6px;
 }
+
+.break-word {
+  word-break: break-word;
+}
